--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,14 @@ version = "1.0.0"
 
 [deps]
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 slope_jll = "baac1969-1582-5600-b38b-7408c9d44009"
 
 [compat]
 Aqua = "0.8"
 CxxWrap = "0.17.0"
+Random = "1.11.0"
 SparseArrays = "1.10.0"
 Test = "1.6"
 julia = "1.6"
