ci: only set concurrency for direct invocation

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -9,9 +9,8 @@ on:
   workflow_call:
 
 concurrency:
-  # Skip intermediate builds: always.
-  # Cancel intermediate builds: only if it is a pull request build.
-  group: ${{ github.workflow }}-${{ github.ref }}
+  # Only set concurrency for direct invocation, not for workflow_call
+  group: ${{ github.workflow_ref != 'workflow_call' && format('{0}-{1}', github.workflow, github.ref) || '' }}
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 
 jobs:
