--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,16 +8,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-test:
-    uses: ./.github/workflows/build-and-test.yml
-    permissions:
-      actions: write
-      contents: read
+  test:
+    uses: ./.github/workflows/test.yml
 
   release:
     name: Release
     needs:
-      - build-and-test
+      - test
     runs-on: ubuntu-latest
     permissions:
       contents: write
