--- a/Project.toml
+++ b/Project.toml
@@ -5,20 +5,24 @@ version = "1.1.0"
 
 [deps]
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 slope_jll = "baac1969-1582-5600-b38b-7408c9d44009"
 
 [compat]
 Aqua = "0.8"
 CxxWrap = "0.17.0"
+Distributions = "0.25.122"
 LinearAlgebra = "1.7.3"
 Plots = "1.40.13"
 Random = "1.7.3"
 RecipesBase = "1.3.4"
 SparseArrays = "1.7.3"
+StatsBase = "0.34.9"
 Test = "1.6"
 julia = "1.7"
 slope_jll = "5.1.1"
