--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "SLOPE"
 uuid = "56cf27a2-3bf1-11f0-14fe-11f76b7dfe56"
-authors = ["Johan Larsson <jolars@posteo.com> and contributors"]
+authors = ["Johan Larsson <johan@jolars.co> and contributors"]
 version = "1.1.0"
 
 [deps]
